Fix reply icon jumping out of place

--- a/web/profiles/custom/os2loop/themes/os2loop_theme/assets/comment.scss
+++ b/web/profiles/custom/os2loop/themes/os2loop_theme/assets/comment.scss
@@ -57,7 +57,7 @@
   }
 }
 
-.comment-reply {
+.comment-write-reply {
   background-color: $light;
   padding: $spacer;
 }
